--- a/4pass.html
+++ b/4pass.html
@@ -25,7 +25,7 @@ background-color: aqua;
     background: grey;
     border-radius: 20px;
     border-color: black;
-    font-size: large;
+    font-size: 50px;
  }
  fieldset{
     border-radius: 100px;
