--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 }
 body{
 width: 800px;
-height: 1000px;
+height: 700px;
 padding-left: 250px;
 background-color: aqua;
 }
@@ -26,7 +26,7 @@ background-color: aqua;
  }
  .quit{
     border-radius: 120px;
-    font-size: large;
+    font-size: 50px;
     background: rgb(136, 129, 129);
     border-color: black;
     
