--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ background-color: aqua;
    border-radius: 20px;
  }
  .quit{
-    border-radius: 120px;
+    border-radius: 30px;
     font-size: 10px;
     background: rgb(136, 129, 129);
     border-color: black;
@@ -44,6 +44,8 @@ background-color: aqua;
         <center>
         <button class="quit"><h4>Click on The <a href="2webpage.html">Instructions</a> Before You Continue!!</h4></button> 
         <br><br>
+            <img src="image/th.png">
+            <br>
        <h1>MAGIC CASH</h1>
     <b>Win Big</b>
     <br><br>
