--- a/3stque.html
+++ b/3stque.html
@@ -22,9 +22,9 @@
         }
  
  body{
-width: 800px;
+width: 500px;
 height: 700px;
-padding-left: 250px;
+padding: 50px;
 background-color: aqua;
 }
 
