--- a/4pass.html
+++ b/4pass.html
@@ -13,23 +13,22 @@
 }
  
 body{
-width: 800px;
-height: 700px;
-padding-left: 250px;
-background-color: aqua;
+    padding: 100px;
+    width: 350px;
+background-color: rgb(116, 231, 231);
 }
  .submit{
    cursor: pointer;
  }
  button{
-    background: grey;
     border-radius: 20px;
+    font-size: 10px;
+    background: rgb(136, 129, 129);
     border-color: black;
-    font-size: 50px;
  }
  fieldset{
-    border-radius: 100px;
-    background-color: rgb(250, 252, 253);
+    border-radius: 50px;
+    background-color: rgb(98, 99, 100);
  }
 
 </style>
@@ -39,7 +38,8 @@ background-color: aqua;
     <center>
         <button><h4>Correct Answerers</h4></button>  
 <br><br>
-
+<img src="image/th.png">
+<br>
     <h1>MAGIC CASH</h1>
     <b>Win Big</b>
     <br><br>
