--- a/5Answerebox.html
+++ b/5Answerebox.html
@@ -11,9 +11,9 @@
 }
  
  body{
-width: 800px;
+width: 500px;
 height: 700px;
-padding-left: 250px;
+padding-left: 50px;
 background-color: aqua;
  }
  .submit{
@@ -55,7 +55,7 @@ background-color: aqua;
     }
     setInterval(displayseconds,1000);
     function redirectpage(){
-        window.location = "2webpage.html"
+        window.location = "http://127.0.0.1:5500/2webpage.html"
     }
     setTimeout('redirectpage()',9000);
 </script>
