--- a/2webpage.html
+++ b/2webpage.html
@@ -143,7 +143,7 @@ padding: 20px;
     <div class="button"></div>
 
         
-        <button class="restart"><a href="index.html">Click to your Questions</a></button></a>
+        <button class="restart"><a href="3stque.html">Click to your Questions</a></button></a>
         <hr>
     </fieldset>
 </body>
