Update and rename index.html to 2webpage.html

--- a/2webpage.html
+++ b/2webpage.html
@@ -70,7 +70,7 @@ padding: 20px;
     <div class="info"><a href="https://wa.me/+254774245620" target="_blank"><i class="fa-3xfa-brands fa-whatsapp"><b>Click Whatsapp</b></i></a>
         .</div>
     <br><br>
-    <button class="next_btn"><a href="4pass.html"><b>Today's Answerers</b></a></button>
+    <button class="next_btn"><a href="index.html"><b>Today's Answerers</b></a></button>
 <hr>
     
     
