--- a/4pass.html
+++ b/4pass.html
@@ -35,9 +35,26 @@ background-color: rgb(116, 231, 231);
 </head>
 <body>
     <fieldset>
+        <script>
+           var password ="q1p2q3p4";
+function passcheck(){
+    if(document.getElementById('pass1').value!=password){
+        alert('Wrong Password,Try Again');
+        return false;
+
+    }
+    if(document.getElementById('pass1').value==password){
+        alert('Correct Password.Click ok to Enter answerers.');
+        
+        
+    }
+}  
+        </script>
     <center>
         <button><h4>Correct Answerers</h4></button>  
 <br><br>
+<img src="image/th.png">
+<br>
     <h1>MAGIC CASH</h1>
     <b>Win Big</b>
     <br><br>
