--- a/2webpage.html
+++ b/2webpage.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="th.icon">
+    <title>Magic Cash</title>
 <style>
 .passform{
     
@@ -44,7 +45,7 @@ padding: 20px;
  }
  
 </style>
-    <title>instruction page</title>
+    
 
 </head>
 <body>
