--- a/3stque.html
+++ b/3stque.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="th.icon">
+    <title>Magic Cash</title>
     <style type="text/css">
         body{
         background:transparent;
@@ -55,7 +56,7 @@ background-color: aqua;
     font-size: large;
  }
 </style>
-    <title>1stque box</title>
+    
 </head>
     <body>
         
