--- a/4pass.html
+++ b/4pass.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="index2.js"></script>
     <link rel="icon" href="th.icon">
- <title>password</title>
+ <title>Magic Cash</title>
  <style>
  .passform{
     font-family: 'poppins',sans-serif;
