--- a/5Answerebox.html
+++ b/5Answerebox.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="th.icon">
+    <title>Magic Cash</title>
+
 <style>
     .passform{
     font-family: 'poppins',sans-serif;
@@ -33,8 +35,7 @@ background-color: aqua;
 
      </style>
      
-    <title>Answerer box</title>
-
+    
 </head>
     <body>
 <fieldset>
