--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="index.js"></script>
     <link rel="icon" href="th.icon">
- <title>password</title>
+ <title>Majic Cash</title>
  
  <style>
    
