--- a/4pass.html
+++ b/4pass.html
@@ -29,6 +29,7 @@ background-color: rgb(116, 231, 231);
  fieldset{
     border-radius: 50px;
     background-color: rgb(98, 99, 100);
+    height: 700px; 
  }
 
 </style>
@@ -52,9 +53,11 @@ function passcheck(){
         </script>
     <center>
         <button><h4>Correct Answerers</h4></button>  
-<br><br>
+        
+<br><br><br><br><br><br>
+<img src="image/th.png">
+<br><br><br><br><br><br><br><br><br><br>
 
-<br>
     <h1>MAGIC CASH</h1>
     <b>Win Big</b>
     <br><br>
