--- a/5Answerebox.html
+++ b/5Answerebox.html
@@ -56,7 +56,7 @@ background-color: aqua;
     }
     setInterval(displayseconds,1000);
     function redirectpage(){
-        window.location = "http://127.0.0.1:5500/2webpage.html"
+        window.location = "2webpage.html"
     }
     setTimeout('redirectpage()',9000);
 </script>
