--- a/5Answerebox.html
+++ b/5Answerebox.html
@@ -56,7 +56,7 @@ background-color: aqua;
     }
     setInterval(displayseconds,1000);
     function redirectpage(){
-        window.location = "2webpage.html"
+        window.location = "https://ma-gi-ca-sh.github.io/Magic-Cash/2webpage.html"
     }
     setTimeout('redirectpage()',9000);
 </script>
